--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wobal-signaturepad",
+  "name": "wobal-signature-pad",
   "description": "Library for drawing smooth signatures.",
   "version": "3.0.0-beta.5",
   "homepage": "https://github.com/szimek/signature_pad",
